# AI-rewriter

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aigen.py  main.py  pydeploy.py  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  gui.py  web.py
core/: __init__.py  api_client.py  config.py  context.py  prompts.py  rewriter.py  settings.py  state_manager.py  text_engine.py
core/services/: __init__.py  interfaces.py  model_provider.py  prompt_service.py  rewrite_service.py
docs/en/: API.md  PROMPTS.md  README.md
docs/ru/: API.md  PROMPTS.md  README.md
docs/zh/: API.md  PROMPTS.md  README.md
gui/: __init__.py  app.py
i18n/: __init__.py  de.json  en.json  es.json  fr.json  ja.json  ko.json  output_languages.json  ru.json  supported_languages.json  zh.json
prompts/: __init__.py  catalog.json
tests/: __init__.py  test_rewriter.py
web/: __init__.py  app.py
web/static/: api.js  app.js  style.css  viewModel.js
web/templates/: index.html
